# aliyun-pds-cpp-sdk-wrapper

./: .gitignore  CMakeLists.txt  readme.md
sample/: CMakeLists.txt  Sample.c  config.h
sample/dir/: CMakeLists.txt  DirSample.c
sdk/: CMakeLists.txt
sdk/include/alibabacloud/pdswrapper/: AsyncTaskGetOutcome.h  AsyncTaskGetRequest.h  AsyncTaskGetResult.h  ClientConfiguration.h  Credentials.h  DataGetOutcome.h  DataGetResult.h  DataPutOutcome.h  DataPutResult.h  DirCreateOutcome.h  DirCreateRequest.h  DirCreateResult.h  DirDeleteOutcome.h  DirDeleteRequest.h  DirDeleteResult.h  DirListOutcome.h  DirListRequest.h  DirListResult.h  DirRenameOutcome.h  DirRenameRequest.h  DirRenameResult.h  DirTrashOutcome.h  DirTrashRequest.h  DirTrashResult.h  FileCompleteOutcome.h  FileCompleteRequest.h  FileCompleteResult.h  FileCreateOutcome.h  FileCreateRequest.h  FileCreateResult.h  FileDeleteOutcome.h  FileDeleteRequest.h  FileDeleteResult.h  FileDownloadRequest.h  FileGetDownloadUrlOutcome.h  FileGetDownloadUrlRequest.h  FileGetDownloadUrlResult.h  FileGetOutcome.h  FileGetRequest.h  FileGetResult.h  (+29 more)
sdk/src/: AsyncTaskGetOutcome.cc  AsyncTaskGetRequest.cc  AsyncTaskGetResult.cc  ClientConfiguration.cc  Credentials.cc  DataGetOutcome.cc  DataGetResult.cc  DataPutOutcome.cc  DataPutResult.cc  DirCreateOutcome.cc  DirCreateRequest.cc  DirCreateResult.cc  DirDeleteOutcome.cc  DirDeleteRequest.cc  DirDeleteResult.cc  DirListOutcome.cc  DirListRequest.cc  DirListResult.cc  DirRenameOutcome.cc  DirRenameRequest.cc  DirRenameResult.cc  DirTrashOutcome.cc  DirTrashRequest.cc  DirTrashResult.cc  FileCompleteOutcome.cc  FileCompleteRequest.cc  FileCompleteResult.cc  FileCreateOutcome.cc  FileCreateRequest.cc  FileCreateResult.cc  FileDeleteOutcome.cc  FileDeleteRequest.cc  FileDeleteResut.cc  FileDownloadRequest.cc  FileGetDownloadUrlOutcome.cc  FileGetDownloadUrlRequest.cc  FileGetDownloadUrlResult.cc  FileGetOutcome.cc  FileGetRequest.cc  FileGetResult.cc  (+28 more)
